update default game and editor startup maps to Lobby

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/UnrealProject250407/Lobby.Lobby
+EditorStartupMap=/Game/UnrealProject250407/Lobby.Lobby
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
