--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/UnrealProject250407/DevMap.DevMap
+EditorStartupMap=/Game/UnrealProject250407/DevMap.DevMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
