lobby greybox + player setup

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/UnrealProject250407/Lobby.Lobby
 EditorStartupMap=/Game/UnrealProject250407/Lobby.Lobby
+GlobalDefaultGameMode=/Game/UnrealProject250407/GM_Main.GM_Main_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
